<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">美术帮</string>
    <string name="tab_homepage">主页</string>
    <string name="tab_question_answer">问答</string>
    <string name="tab_me">个人</string>
    <string name="tab_gallery">图库</string>
    <string name="tab_find">发现</string>
    <string name="timefirst">时间</string>
    <string name="hotfirst">热度</string>
    <string name="post_problem">详细描述问题</string>
    <string name="login">登录</string>
    <string name="post_hint">拍照更容易获得答案哦</string>
    <string name="wordleft_hint">还可以输入140字</string>
    <string name="large_image_title">查看大图</string>
    <string name="city_inflate_title">选择地区</string>
    <string name="room_detail_phone">联系电话：</string>
    <string name="room_detail_environment">画室环境：</string>
    <string name="room_detail_grade">学生成绩：</string>
    <string name="room_detail_fair">收费标准：</string>
    <string name="dial">拨打</string>
    <string name="detail">详情</string>
    <string name="userinfo">个人信息</string>
    <string name="header">头像</string>
    <string name="find_friend">发现并添加好友</string>
    <string name="connection_fail">网络连接不良</string>
    <string name="title_activity_large_image">LargeImageActivity</string>
    <string name="title_activity_city_inflate">CityInflateActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home_item_info">HomeItemInfoActivity</string>
    <string name="title_activity_room_detail">RoomDetailActivity</string>
    <string name="title_activity_sub_class">SubClassActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_find_friend">FindFriendActivity</string>
    <string name="title_activity_modify_user_info">ModifyUserInfoActivity</string>
    <string name="title_activity_teacher_detail">TeacherDetailActivity</string>
    <string name="title_activity_video_detail">VideoDetailActivity</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="title_activity_studio_environment">StudioEnvironmentActivity</string>
    <string name="title_activity_find_studio">FindStudioActivity</string>

</resources>
