<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <com.gexin.artplatform.view.TitleBar
        android:id="@+id/tb_post_problem"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#445bc8"
        custom:titleColor="#ffffff"
        custom:titleSize="7sp"
        custom:titleText="@string/post_problem" >
    </com.gexin.artplatform.view.TitleBar>

    <EditText
        android:id="@+id/et_content_postproblem"
        android:layout_width="fill_parent"
        android:layout_height="125dp"
        android:background="#e2e2e4"
        android:textSize="20sp"
        android:gravity="top"
        android:padding="10dp"
        android:maxLength="140"
        android:hint="@string/post_hint" />

    <TextView android:id="@+id/tv_wordleft_post_problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wordleft_hint"
        android:gravity="right"
        android:textColor="#959595"
        android:layout_margin="5dp"/>
    
    <ImageButton
        android:id="@+id/ibtn_image_postproblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@null"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:layout_marginLeft="30dp"
        android:src="@drawable/add_icon" />



</LinearLayout>