<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#f6f6f6"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_indicator_one_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_indicator_icon_one_main"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:scaleType="centerInside"
                android:src="@drawable/home_icon_2" />

            <TextView
                android:id="@+id/tv_indicator_icon_one_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_homepage"
                android:textColor="#cdfe6060"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_indicator_two_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_indicator_icon_two_main"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:scaleType="centerInside"
                android:src="@drawable/question_icon_1" />

            <TextView
                android:id="@+id/tv_indicator_icon_two_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_question_answer"
                android:textColor="#cd504f4f"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_indicator_three_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_indicator_icon_three_main"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:scaleType="centerInside"
                android:src="@drawable/discover_icon_1" />

            <TextView
                android:id="@+id/tv_indicator_icon_three_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_find"
                android:textColor="#cd504f4f"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_indicator_four_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_indicator_icon_four_main"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerInside"
                android:padding="4dp"
                android:src="@drawable/me_icon_1" />

            <TextView
                android:id="@+id/tv_indicator_icon_four_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_me"
                android:textColor="#cd504f4f"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>