<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <com.gexin.artplatform.view.TitleBar
        android:id="@+id/tb_activity_room_detail"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#66000000" >
    </com.gexin.artplatform.view.TitleBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:background="@drawable/studio_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_marginTop="5dp"
            android:id="@+id/iv_roomlogo_room_detail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#80ffffff"
            android:scaleType="centerCrop"
            android:padding="3dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_name_room_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ibtn_interest_room_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:src="@drawable/interest_icon_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_answernum_room_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/tv_focusnum_room_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/tv_fannum_room_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/room_detail_phone"
            android:textColor="#2e2e2e"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_phone_room_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#2e2e2e"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_dial_room_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:text="@string/dial"
            android:textColor="#445bc8"
            android:textSize="14sp" />
    </LinearLayout>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/room_detail_environment"
            android:textColor="#2e2e2e"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_environment_room_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#2e2e2e"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_envir_info_room_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:text="@string/detail"
            android:textColor="#445bc8"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/room_detail_grade"
            android:textColor="#2e2e2e"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_grade_room_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="合格率50%，高分率23%"
            android:textColor="#2e2e2e"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_grade_info_room_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:text="@string/detail"
            android:textColor="#445bc8"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/room_detail_fair"
            android:textColor="#2e2e2e"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_fair_room_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2000元/年"
            android:textColor="#2e2e2e"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="介绍："
        android:layout_marginLeft="10dp"
        android:textColor="#2e2e2e"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_describe_room_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="这是描述"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#2e2e2e"
        android:maxLines="3"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#c9c9c9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_answered_room_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="已回答"
            android:textColor="#80fe6060"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="#c9c9c9" />

        <TextView
            android:id="@+id/tv_gallery_room_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="作品集"
            android:textColor="#959595"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="#c9c9c9" />

        <TextView
            android:id="@+id/tv_teachers_room_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="师资介绍"
            android:textColor="#959595"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="#c9c9c9" />

        <TextView
            android:id="@+id/tv_hire_room_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="教师招聘"
            android:textColor="#959595"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="#c9c9c9" />

        <TextView
            android:id="@+id/tv_video_room_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="教学视频"
            android:textColor="#959595"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#f2f2f3" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_activity_room_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

</LinearLayout>